# luminousminer

./: BENCHMARK.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODING_STYLE.md  FISHHASH.md  POOLS.md  README.md
.github/workflows/: miner_linux_arm64_vcpkg.yml  miner_linux_x64_vcpkg.yml
dev/: .gitignore
docker/: Dockerfile.windows-cross
documentation/: PARAMETERS.md  POOLS.md
sources/: CMakeLists.txt
sources/algo/: CMakeLists.txt  algo_type.cpp  algo_type.hpp
sources/algo/fishhash/: CMakeLists.txt  fishhash.cpp  fishhash.hpp  result.hpp
sources/algo/fishhash/opencl/: CMakeLists.txt  fishhash_dag.cl  fishhash_search.cl
sources/algo/fishhash/reference/: CMakeLists.txt  FishHash.cpp  FishHash.h
sources/algo/fishhash/tests/: CMakeLists.txt  fishhash.cpp  fishhashplus.cpp
sources/algo/octopus/: CMakeLists.txt  light.cpp  light.hpp  multi_eval.cpp  multi_eval.hpp  octopus.cpp  octopus.hpp  result.hpp  siphash.hpp
sources/algo/octopus/opencl/: CMakeLists.txt  octopus_dag.cl  octopus_search.cl
sources/algo/octopus/tests/: CMakeLists.txt  light.cpp  multi_eval.cpp  octopus_sizes.cpp  reference_vectors.md
sources/algo/progpow/opencl/: progpow.cl
sources/algo/pyrinhashv2/: CMakeLists.txt  hashers.cpp  hashers.hpp  matrix.cpp  matrix.hpp  pyrinhashv2.cpp  pyrinhashv2.hpp  types.hpp  xoshiro.hpp
sources/algo/pyrinhashv2/dev/: oracle.mjs
sources/algo/pyrinhashv2/opencl/: CMakeLists.txt  pyrinhashv2.cl
sources/algo/pyrinhashv2/opencl/tests/: opencl_kat_test.cpp
sources/algo/pyrinhashv2/tests/: CMakeLists.txt  pyrinhashv2_test.cpp  pyrinhashv2_test_vectors.hpp
sources/algo/randomx/: CMakeLists.txt  randomx_pow.cpp  randomx_pow.hpp  result.hpp
sources/algo/randomx/randomx/: CMakeLists.txt
sources/algo/randomx/randomx/src/: aes_hash_rv64_vector.hpp  aes_hash_rv64_zvkned.cpp  aes_hash_rv64_zvkned.hpp  cpu.cpp  cpu.hpp  cpu_rv64.S  jit_compiler_a64.cpp  jit_compiler_rv64.cpp  jit_compiler_rv64_vector.cpp  jit_compiler_rv64_vector_static.h  virtual_machine.cpp
sources/algo/randomx/randomx/src/asm/: program_loop_store.inc  program_read_dataset_sshash_init.inc
sources/algo/randomx/randomx/src/tests/: benchmark.cpp  riscv64_zvkned.s  tests.cpp
sources/algo/randomx/tests/: CMakeLists.txt  randomx_kat.cpp
sources/algo/tests/: algo_type.cpp
sources/algo/xelishashv3/: CMakeLists.txt  PERF.md  aes.cpp  aes.hpp  chacha8.cpp  chacha8.hpp  result.hpp  types.hpp  xelishashv3.cpp  xelishashv3.hpp
sources/algo/xelishashv3/opencl/: CMakeLists.txt  xelishashv3.cl
sources/algo/xelishashv3/opencl/tests/: opencl_divmod_bench.cpp  opencl_kat_test.cpp
sources/algo/xelishashv3/tests/: CMakeLists.txt  xelishashv3_test.cpp  xelishashv3_test_vectors.hpp
sources/benchmark/: CMakeLists.txt  amd.cpp  config.cpp  config.json  workflow.cpp  workflow.hpp
sources/benchmark/amd/: octopus.cpp  xelishashv3.cpp
sources/benchmark/opencl/: CMakeLists.txt
sources/benchmark/opencl/octopus/: octopus_lm1.cl  octopus_lm2.cl  octopus_lm3.cl  octopus_lm4.cl  octopus_lm5.cl  octopus_lm6.cl  octopus_lm7.cl  octopus_lm8.cl
sources/common/kernel_generator/: opencl.cpp
sources/common/mocker/: stratum.hpp
sources/common/opencl/: platform_match.hpp
sources/device/: cpu.cpp  cpu.hpp  device.cpp  device_amd.cpp  device_cpu.cpp  device_manager.cpp  device_nvidia.cpp
sources/resolver/amd/: autolykos_v2.cpp  autolykos_v2_kernel_parameter.hpp  ethash.cpp  fishhash.cpp  fishhash.hpp  fishhash_kernel_parameter.hpp  fishhashplus.cpp  fishhashplus.hpp  octopus.cpp  octopus.hpp  octopus_kernel_parameter.hpp  xelishashv3.cpp  xelishashv3.hpp  xelishashv3_kernel_parameter.hpp
sources/resolver/amd/tests/: fishhash.cpp  fishhashplus.cpp  octopus.cpp  octopus_bench.cpp  octopus_dag.cpp  octopus_search.cpp
sources/resolver/cpu/: randomx.cpp  randomx.hpp
sources/resolver/cpu/tests/: randomx.cpp
sources/stratum/: fishhash.cpp  fishhash.hpp  fishhashplus.cpp  fishhashplus.hpp  job_info.cpp  job_info.hpp  monero.cpp  monero.hpp  octopus.cpp  octopus.hpp  stratums.cpp  stratums.hpp  xelishashv3.cpp  xelishashv3.hpp
sources/stratum/tests/: fishhash_protocol.cpp
